syntax = "proto3";

package org.cirruslabs.ci.services.cirruscigrpc;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.cirruslabs.ci.services.cirruscigrpc.grpc";
option java_outer_classname = "CirrusCIProto";

option go_package = "api";

service CirrusCIService {
  rpc InitialCommands (InitialCommandsRequest) returns (CommandsResponse) {
  }
  rpc ReportSingleCommand (ReportSingleCommandRequest) returns (ReportSingleCommandResponse) {
  }
  rpc ReportAnnotations (ReportAnnotationsCommandRequest) returns (google.protobuf.Empty) {
  }
  rpc StreamLogs (stream LogEntry) returns (UploadLogsResponse) {
  }
  rpc SaveLogs (stream LogEntry) returns (UploadLogsResponse) {
  }
  rpc UploadCache (stream CacheEntry) returns (UploadCacheResponse) {
  }
  rpc UploadArtifacts (stream ArtifactEntry) returns (UploadArtifactsResponse) {
  }
  rpc DownloadCache (DownloadCacheRequest) returns (stream DataChunk) {
  }
  rpc CacheInfo (CacheInfoRequest) returns (CacheInfoResponse) {
  }
  rpc Ping (google.protobuf.Empty) returns (google.protobuf.Empty) {
  }
  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse) {
  }
  rpc ReportStopHook (ReportStopHookRequest) returns (google.protobuf.Empty) {
  }
  rpc ReportAgentError (ReportAgentProblemRequest) returns (google.protobuf.Empty) {
  }
  rpc ReportAgentWarning (ReportAgentProblemRequest) returns (google.protobuf.Empty) {
  }
  rpc ReportAgentSignal (ReportAgentSignalRequest) returns (google.protobuf.Empty) {
  }
  rpc ReportAgentLogs (ReportAgentLogsRequest) returns (google.protobuf.Empty) {
  }
}

message TaskIdentification {
  int64 task_id = 1;
  string secret = 2;
}

message DataChunk {
  bytes data = 1;
}

message InitialCommandsRequest {
  TaskIdentification task_identification = 1;
  int64 local_timestamp = 2;
  string continue_from_command = 3;
}

message LogEntry {
  message LogKey {
    TaskIdentification task_identification = 1;
    string command_name = 2;
    bool raw = 3; // true to disable live updates
  }
  oneof value {
    LogKey key = 1;
    DataChunk chunk = 2;
  }
}

message UploadLogsResponse {
  int64 bytes_logged = 1;
}

message CacheEntry {
  message CacheKey {
    TaskIdentification task_identification = 1;
    string cache_key = 2;
  }
  oneof value {
    CacheKey key = 1;
    DataChunk chunk = 2;
  }
}

message UploadCacheResponse {
  int64 bytes_saved = 1;
}

message ArtifactEntry {
  message ArtifactsUpload {
    TaskIdentification task_identification = 1;
    string name = 2;
    string type = 3;
    string format = 4;
  }
  message ArtifactChunk {
    string artifact_path = 1;
    bytes data = 2;
  }
  oneof value {
    ArtifactsUpload artifacts_upload = 1;
    ArtifactChunk chunk = 2;
  }
}

message UploadArtifactsResponse {
  int64 bytes_saved = 1;
}

message DownloadCacheRequest {
  TaskIdentification task_identification = 1;
  string cache_key = 2;
}

message CommandsResponse {
  map<string, string> environment = 1;
  repeated Command commands = 2;
  string serverToken = 3;
  int64 timeout_in_seconds = 4;
  repeated string secrets_to_mask = 5;

  // typed commands
  message Command {
    string name = 1;
    oneof instruction {
      ExitInstruction exit_instruction = 2;
      ScriptInstruction script_instruction = 3;
      BackgroundScriptInstruction background_script_instruction = 4;
      CacheInstruction cache_instruction = 5;
      UploadCacheInstruction upload_cache_instruction = 6;
      CloneInstruction clone_instruction = 7;
      FileInstruction file_instruction = 8;
      ArtifactsInstruction artifacts_instruction = 9;
    }
  }

  message ExitInstruction {
  }

  message ScriptInstruction {
    repeated string scripts = 1;
  }

  message BackgroundScriptInstruction {
    repeated string scripts = 1;
  }

  message CacheInstruction {
    string folder = 1;
    repeated string fingerprint_scripts = 2;
    repeated string populate_scripts = 3;
    bool reupload_on_changes = 4;
  }

  message UploadCacheInstruction {
    string cache_name = 1;
  }

  message CloneInstruction {
  }

  message FileInstruction {
    string destination_path = 1;
    oneof source {
      string from_environment_variable = 2;
    }
  }

  message ArtifactsInstruction {
    repeated string paths = 1;
    string type = 2;
    string format = 3;
  }
}

message ReportSingleCommandRequest {
  TaskIdentification task_identification = 1;
  string command_name = 2;
  bool succeded = 3;
  int64 duration_in_seconds = 4;
  bool signaled_to_exit = 5;
  int64 local_timestamp = 6;
}

message ReportSingleCommandResponse {
  string next_command_name = 1;
  map<string, string> additional_environment = 2;
}

message ReportAnnotationsCommandRequest {
  TaskIdentification task_identification = 1;
  repeated Annotation annotations = 2;
}

message Annotation {
  message FileLocation {
    string path = 1;
    int64 start_line = 2;
    int64 end_line = 3;
    int64 start_column = 4;
    int64 end_column = 5;
  }
  enum Level {
    NOTICE = 0;
    WARNING = 1;
    FAILURE = 2;
  }
  enum Type {
    GENERIC = 0;
    TEST_RESULT = 1;
    LINT_RESULT = 2;
    ANALYSIS_RESULT = 3;
  }
  Type type = 1;
  Level level = 2;
  string message = 3;
  string raw_details = 4;
  string fully_qualified_name = 5;
  FileLocation file_location = 6;
}

message HeartbeatRequest {
  TaskIdentification task_identification = 1;
}

message HeartbeatResponse {
}

message CacheInfoRequest {
  TaskIdentification task_identification = 1;
  string cache_key = 2;
}

message CacheInfo {
  string key = 1;
  int64 size_in_bytes = 2;
  int64 creation_timestamp = 3;
  int64 created_by_task_id = 4;
}

message CacheInfoResponse {
  CacheInfo info = 1;
}

message ReportAgentProblemRequest {
  TaskIdentification task_identification = 1;
  string message = 2;
  string stack = 3;
}

message ReportStopHookRequest {
  TaskIdentification task_identification = 1;
}

message ReportAgentSignalRequest {
  TaskIdentification task_identification = 1;
  string signal = 2;
}

message ReportAgentLogsRequest {
  TaskIdentification task_identification = 1;
  string logs = 2;
}
